FireFox fixes Fixed FireFox Comfortaa font render AGAIN Fixed FireFox iframe overflow on body

--- a/au/src/global.styl
+++ b/au/src/global.styl
@@ -5,7 +5,7 @@ body, html
   font 14px 'Verdana', 'Geneva', 'Tahoma', sans-serif
   // background url($body-bg-image) repeat fixed
   background-color #111
-  overflow-x hidden
+  overflow hidden
   height 100%
   -webkit-font-smoothing antialiased;
   -moz-osx-font-smoothing grayscale;
