--- a/au/src/style_utilities/partials/_menu.styl
+++ b/au/src/style_utilities/partials/_menu.styl
@@ -59,7 +59,7 @@ menu#MainMenu
       li
         padding 2px 3px 0 0
       span
-        top -5px
+        top -1px
 // End FireFox Hack
 
 
